<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/permissionBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSdScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"

                    android:paddingEnd="30dp">
                    <ImageView
                        android:id="@+id/logo_img"
                        android:layout_marginTop="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_23070778"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/txt_Permission"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <TextView
                        android:id="@+id/txt_Permission"
                        style="@style/txt_black01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:text="@string/txt_sdScore"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/logo_img" />



                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@color/permission"
                    android:paddingStart="30dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="약관 동의"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/txt_Permission" />

                <LinearLayout
                    android:layout_marginTop="150dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <CheckBox
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:id="@+id/checkAllAgree"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:button="@drawable/chk_selector_3"
                            />

                        <CheckedTextView
                            android:layout_marginStart="10dp"
                            android:id="@+id/check_txt"
                            style="@style/txt_agreement_lg"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="모두 동의할게요!"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/checkAllAgree"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <View
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chkAgree01"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:button="@drawable/chk_selector_2" />

                        <CheckedTextView
                            android:id="@+id/txtAgree01"
                            style="@style/txt_agreement_reg"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                            android:text="@string/txt_chk_subtitle_membership_01" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chkAgree02"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:button="@drawable/chk_selector_2" />

                        <CheckedTextView
                            android:id="@+id/txtAgree02"
                            style="@style/txt_agreement_reg"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                            android:text="@string/txt_chk_subtitle_membership_02" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSdScore"
            style="@style/btn_clickable"
            android:layout_width="match_parent"
            android:enabled="true"
            android:text="데이터 수집 시작"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>